add All Data list

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -6,7 +6,8 @@
   "CHARACTER": {
     "PROPS": "人物属性",
     "TALENTS": "技能天赋",
-    "CONSTELLATION": "命座"
+    "CONSTELLATION": "命座",
+    "ALLPROPS": "全属性"
   },
   "WEAPON": {
     "NAME": "武器名",
@@ -77,7 +78,110 @@
     "DMG_ANTI_GEO": "岩元素抗性",
     "DMG_ANTI_PYRO": "火元素抗性",
     "DMG_ANTI_HYDRO": "水元素抗性",
-    "DMG_ANTI_DENDRO": "草元素抗性"
+    "DMG_ANTI_DENDRO": "草元素抗性",
+    "HP_BASE": "基础生命值",
+    "ATTACK_BASE": "基础攻击力",
+    "DEFENSE_BASE": "基础防御力",
+    "HP_VAL_UP": "生命值增加值",
+    "ATTACK_VAL_UP": "攻击力增加值",
+    "DEFENSE_VAL_UP": "防御力增加值",
+    "DMG_BONUS_WEAPON": "武器增伤",
+    "DMG_BONUS_OTHER": "其他增伤",
+    "HEALING_BONUS_NORMAL": "普攻治疗提升",
+    "HEALING_BONUS_SKILL": "元素技能治疗提升",
+    "HEALING_BONUS_ELEMENTAL_BURST": "元素爆发治疗提升",
+    "HEALING_BONUS_WEAPON": "武器治疗提升",
+    "HEALING_BONUS_OTHER": "其他治疗提升",
+    "DMG_ANTI_CRYO_MINUS": "冰元素耐性减少",
+    "DMG_ANTI_ANEMO_MINUS": "风元素耐性减少",
+    "DMG_ANTI_PHYSICAL_MINUS": "物理耐性减少",
+    "DMG_ANTI_ELECTRO_MINUS": "雷元素耐性减少",
+    "DMG_ANTI_GEO_MINUS": "岩元素耐性减少",
+    "DMG_ANTI_PYRO_MINUS": "火元素耐性减少",
+    "DMG_ANTI_HYDRO_MINUS": "水元素耐性减少",
+    "DMG_ANTI_DENDRO_MINUS": "草元素耐性减少",
+    "DMG_ANTI_ALL_MINUS": "全元素耐性减少",
+    "DMG_RATE_UP_CRYO": "冰元素伤害倍率增加值",
+    "DMG_RATE_UP_ANEMO": "风元素伤害倍率增加值",
+    "DMG_RATE_UP_PHYSICAL": "物理伤害倍率增加值",
+    "DMG_RATE_UP_ELECTRO": "雷元素伤害倍率增加值",
+    "DMG_RATE_UP_GEO": "岩元素伤害倍率增加值",
+    "DMG_RATE_UP_PYRO": "火元素伤害倍率增加值",
+    "DMG_RATE_UP_HYDRO": "水元素伤害倍率增加值",
+    "DMG_RATE_UP_DENDRO": "草元素伤害倍率增加值",
+    "DMG_RATE_UP_ALL": "全伤害倍率增加值",
+    "DMG_RATE_UP_NORMAL": "基本攻击伤害倍率增加值",
+    "DMG_RATE_UP_CHARGED": "重击伤害倍率增加值",
+    "DMG_RATE_UP_PLUNGING": "下落攻击伤害倍率增加值",
+    "DMG_RATE_UP_SKILL": "元素技能伤害倍率增加值",
+    "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害倍率增加值",
+    "DMG_RATE_UP_WEAPON": "武器伤害倍率增加值",
+    "DMG_RATE_UP_OTHER": "其他伤害倍率增加值",
+    "HEALING_RATE_UP_SKILL": "元素技能治疗倍率增加值",
+    "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆发治疗倍率增加值",
+    "DMG_VAL_UP_CRYO": "冰元素伤害增加值",
+    "DMG_VAL_UP_ANEMO": "风元素伤害增加值",
+    "DMG_VAL_UP_PHYSICAL": "物理伤害增加值",
+    "DMG_VAL_UP_ELECTRO": "雷元素伤害增加值",
+    "DMG_VAL_UP_GEO": "岩元素伤害增加值",
+    "DMG_VAL_UP_PYRO": "火元素伤害增加值",
+    "DMG_VAL_UP_HYDRO": "水元素伤害增加值",
+    "DMG_VAL_UP_DENDRO": "草元素伤害增加值",
+    "DMG_VAL_UP_ALL": "全伤害增加值",
+    "DMG_VAL_UP_NORMAL": "基本攻击伤害增加值",
+    "DMG_VAL_UP_CHARGED": "重击伤害增加值",
+    "DMG_VAL_UP_PLUNGING": "落下攻击伤害增加值",
+    "DMG_VAL_UP_SKILL": "元素技能伤害增加值",
+    "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆发伤害增加值",
+    "DMG_VAL_UP_WEAPON": "武器伤害增加值",
+    "DMG_VAL_UP_OTHER": "其他伤害增加值",
+    "HEALING_VAL_UP_SKILL": "元素技能治疗增加值",
+    "HEALING_VAL_UP_ELEMENTAL_BURST": "元素爆发治疗增加值",
+    "DMG_CRIT_RATE_UP_CRYO": "冰元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_ANEMO": "风元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_PHYSICAL": "物理伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_ELECTRO": "雷元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_GEO": "岩元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_PYRO": "火元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_HYDRO": "水元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_DENDRO": "草元素伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_ALL": "全伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_NORMAL": "基本攻击伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_CHARGED": "重击伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_PLUNGING": "落下攻击伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_SKILL": "元素技能伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_WEAPON": "武器伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_OTHER": "其他伤害暴击率增加值",
+    "DMG_CRIT_DMG_UP_CRYO": "冰元素伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_ANEMO": "风元素伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_PHYSICAL": "物理伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_ELECTRO": "雷元素伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_GEO": "岩元素伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_PYRO": "火元素伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_HYDRO": "水元素伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_DENDRO": "草元素伤害暴击伤害值",
+    "DMG_CRIT_DMG_UP_ALL": "全伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_NORMAL": "基本攻击伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_CHARGED": "重击伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_PLUNGING": "落下攻击伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_SKILL": "元素技能伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "元素爆发伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_WEAPON": "武器伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_OTHER": "其他伤害暴击伤害增加值",
+    "DMG_ELEMENT_UP": "元素増幅（全）",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅（蒸发）",
+    "DMG_ELEMENT_MELT_UP": "元素増幅（融化）",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅（超载）",
+    "DMG_ELEMENT_BURNING_UP": "元素増幅（燃烧）",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅（感电）",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅（超导）",
+    "DMG_ELEMENT_SWIRL_UP": "元素増幅（扩散）",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅（破冰）",
+    "DMG_ELEMENT_SHIELD_UP": "元素増幅（結晶）",
+    "DMG_ENEMY_DEFENSE_BASE": "敌人基础防御",
+    "DMG_ENEMY_DEFENSE": "敌人防御",
+    "DMG_ENEMY_DEFENSE_DOWN": "敌人防御减少"
   },
   "GENSHIN": {
     "DMG":{
