--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -6,7 +6,8 @@
   "CHARACTER": {
     "PROPS": "人物屬性",
     "TALENTS": "技能天賦",
-    "CONSTELLATION": "命座"
+    "CONSTELLATION": "命座",
+    "ALLPROPS": "全屬性"
   },
   "WEAPON": {
     "NAME": "武器名",
@@ -77,7 +78,110 @@
     "DMG_ANTI_GEO": "岩元素抗性",
     "DMG_ANTI_PYRO": "火元素抗性",
     "DMG_ANTI_HYDRO": "水元素抗性",
-    "DMG_ANTI_DENDRO": "草元素抗性"
+    "DMG_ANTI_DENDRO": "草元素抗性",
+    "HP_BASE": "基礎生命值",
+    "ATTACK_BASE": "基礎攻擊力",
+    "DEFENSE_BASE": "基礎防禦力",
+    "HP_VAL_UP": "生命值增加值",
+    "ATTACK_VAL_UP": "攻擊力增加值",
+    "DEFENSE_VAL_UP": "防禦力增加值",
+    "DMG_BONUS_WEAPON": "武器增傷",
+    "DMG_BONUS_OTHER": "其他增傷",
+    "HEALING_BONUS_NORMAL": "普攻治療提升",
+    "HEALING_BONUS_SKILL": "元素技能治療提升",
+    "HEALING_BONUS_ELEMENTAL_BURST": "元素爆發治療提升",
+    "HEALING_BONUS_WEAPON": "武器治療提升",
+    "HEALING_BONUS_OTHER": "其他治療提升",
+    "DMG_ANTI_CRYO_MINUS": "冰元素耐性減少",
+    "DMG_ANTI_ANEMO_MINUS": "風元素耐性減少",
+    "DMG_ANTI_PHYSICAL_MINUS": "物理耐性減少",
+    "DMG_ANTI_ELECTRO_MINUS": "雷元素耐性減少",
+    "DMG_ANTI_GEO_MINUS": "岩元素耐性減少",
+    "DMG_ANTI_PYRO_MINUS": "火元素耐性減少",
+    "DMG_ANTI_HYDRO_MINUS": "水元素耐性減少",
+    "DMG_ANTI_DENDRO_MINUS": "草元素耐性減少",
+    "DMG_ANTI_ALL_MINUS": "全元素耐性減少",
+    "DMG_RATE_UP_CRYO": "冰元素傷害倍率增加值",
+    "DMG_RATE_UP_ANEMO": "風元素傷害倍率增加值",
+    "DMG_RATE_UP_PHYSICAL": "物理傷害倍率增加值",
+    "DMG_RATE_UP_ELECTRO": "雷元素傷害倍率增加值",
+    "DMG_RATE_UP_GEO": "岩元素傷害倍率增加值",
+    "DMG_RATE_UP_PYRO": "火元素傷害倍率增加值",
+    "DMG_RATE_UP_HYDRO": "水元素傷害倍率增加值",
+    "DMG_RATE_UP_DENDRO": "草元素傷害倍率增加值",
+    "DMG_RATE_UP_ALL": "全傷害倍率增加值",
+    "DMG_RATE_UP_NORMAL": "基本攻擊傷害倍率增加值",
+    "DMG_RATE_UP_CHARGED": "重擊傷害倍率增加值",
+    "DMG_RATE_UP_PLUNGING": "下落攻擊傷害倍率增加值",
+    "DMG_RATE_UP_SKILL": "元素技能傷害倍率增加值",
+    "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆發傷害倍率增加值",
+    "DMG_RATE_UP_WEAPON": "武器傷害倍率增加值",
+    "DMG_RATE_UP_OTHER": "其他傷害倍率增加值",
+    "HEALING_RATE_UP_SKILL": "元素技能治療倍率增加值",
+    "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆發治療倍率增加值",
+    "DMG_VAL_UP_CRYO": "冰元素傷害增加值",
+    "DMG_VAL_UP_ANEMO": "風元素傷害增加值",
+    "DMG_VAL_UP_PHYSICAL": "物理傷害增加值",
+    "DMG_VAL_UP_ELECTRO": "雷元素傷害增加值",
+    "DMG_VAL_UP_GEO": "岩元素傷害增加值",
+    "DMG_VAL_UP_PYRO": "火元素傷害增加值",
+    "DMG_VAL_UP_HYDRO": "水元素傷害增加值",
+    "DMG_VAL_UP_DENDRO": "草元素傷害增加值",
+    "DMG_VAL_UP_ALL": "全傷害增加值",
+    "DMG_VAL_UP_NORMAL": "基本攻擊傷害增加值",
+    "DMG_VAL_UP_CHARGED": "重擊傷害增加值",
+    "DMG_VAL_UP_PLUNGING": "落下攻擊傷害增加值",
+    "DMG_VAL_UP_SKILL": "元素技能傷害增加值",
+    "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆發傷害增加值",
+    "DMG_VAL_UP_WEAPON": "武器傷害增加值",
+    "DMG_VAL_UP_OTHER": "其他傷害增加值",
+    "HEALING_VAL_UP_SKILL": "元素技能治療增加值",
+    "HEALING_VAL_UP_ELEMENTAL_BURST": "元素爆發治療增加值",
+    "DMG_CRIT_RATE_UP_CRYO": "冰元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_ANEMO": "風元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_PHYSICAL": "物理傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_ELECTRO": "雷元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_GEO": "岩元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_PYRO": "火元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_HYDRO": "水元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_DENDRO": "草元素傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_ALL": "全傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_NORMAL": "基本攻擊傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_CHARGED": "重擊傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_PLUNGING": "落下攻擊傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_SKILL": "元素技能傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆發傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_WEAPON": "武器傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_OTHER": "其他傷害暴擊率增加值",
+    "DMG_CRIT_DMG_UP_CRYO": "冰元素傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_ANEMO": "風元素傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_PHYSICAL": "物理傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_ELECTRO": "雷元素傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_GEO": "岩元素傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_PYRO": "火元素傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_HYDRO": "水元素傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_DENDRO": "草元素傷害暴擊傷害值",
+    "DMG_CRIT_DMG_UP_ALL": "全傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_NORMAL": "基本攻擊傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_CHARGED": "重擊傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_PLUNGING": "落下攻擊傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_SKILL": "元素技能傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "元素爆發傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_WEAPON": "武器傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_OTHER": "其他傷害暴擊傷害增加值",
+    "DMG_ELEMENT_UP": "元素増幅（全）",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅（蒸發）",
+    "DMG_ELEMENT_MELT_UP": "元素増幅（融化）",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅（超載）",
+    "DMG_ELEMENT_BURNING_UP": "元素増幅（燃燒）",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅（感電）",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅（超導）",
+    "DMG_ELEMENT_SWIRL_UP": "元素増幅（擴散）",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅（破冰）",
+    "DMG_ELEMENT_SHIELD_UP": "元素増幅（結晶）",
+    "DMG_ENEMY_DEFENSE_BASE": "敵人基礎防禦",
+    "DMG_ENEMY_DEFENSE": "敵人防禦",
+    "DMG_ENEMY_DEFENSE_DOWN": "敵人防禦減少"
   },
   "GENSHIN": {
     "DMG":{
