--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,8 @@
   "CHARACTER": {
     "PROPS": "Character Attributes",
     "TALENTS": "Skill Talents",
-    "CONSTELLATION": "Constellation"
+    "CONSTELLATION": "Constellation",
+    "ALLPROPS": "All Attributes"
   },
   "WEAPON": {
     "NAME": "Weapon Name",
@@ -77,7 +78,110 @@
     "DMG_ANTI_GEO": "Geo Resistance",
     "DMG_ANTI_PYRO": "Pyro Resistance",
     "DMG_ANTI_HYDRO": "Hydro Resistance",
-    "DMG_ANTI_DENDRO": "Dendro Resistance"
+    "DMG_ANTI_DENDRO": "Dendro Resistance",
+    "HP_BASE": "Basic HP",
+    "ATTACK_BASE": "Basic Attack",
+    "DEFENSE_BASE": "Basic Defense",
+    "HP_VAL_UP": "HP Increase",
+    "ATTACK_VAL_UP": "Attack Increase",
+    "DEFENSE_VAL_UP": "Defense Increase",
+    "DMG_BONUS_WEAPON": "Weapon DMG Increase",
+    "DMG_BONUS_OTHER": "Other DMG Increase",
+    "HEALING_BONUS_NORMAL": "General Attack Treatment Improvement",
+    "HEALING_BONUS_SKILL": "Skill Treatment Improvement",
+    "HEALING_BONUS_ELEMENTAL_BURST": "Elemental Burst Treatment Improvement",
+    "HEALING_BONUS_WEAPON": "Weapon Treatment Improvement",
+    "HEALING_BONUS_OTHER": "Other Treatment Improvement",
+    "DMG_ANTI_CRYO_MINUS": "Cryo Tolerance Reduce",
+    "DMG_ANTI_ANEMO_MINUS": "Anemo Tolerance Reduce",
+    "DMG_ANTI_PHYSICAL_MINUS": "Physical Tolerance Reduce",
+    "DMG_ANTI_ELECTRO_MINUS": "Electro Tolerance Reduce",
+    "DMG_ANTI_GEO_MINUS": "Geo Tolerance Reduce",
+    "DMG_ANTI_PYRO_MINUS": "Pyro Tolerance Reduce",
+    "DMG_ANTI_HYDRO_MINUS": "Hydro Tolerance Reduce",
+    "DMG_ANTI_DENDRO_MINUS": "Dendro Tolerance Reduce",
+    "DMG_ANTI_ALL_MINUS": "All Element Tolerance Reduce",
+    "DMG_RATE_UP_CRYO": "Cryo DMG Rate Increase",
+    "DMG_RATE_UP_ANEMO": "Anemo DMG Rate Increase",
+    "DMG_RATE_UP_PHYSICAL": "Physical DMG Rate Increase",
+    "DMG_RATE_UP_ELECTRO": "Electro DMG Rate Increase",
+    "DMG_RATE_UP_GEO": "Geo DMG Rate Increase",
+    "DMG_RATE_UP_PYRO": "Pyro DMG Rate Increase",
+    "DMG_RATE_UP_HYDRO": "Hydro DMG Rate Increase",
+    "DMG_RATE_UP_DENDRO": "Dendro DMG Rate Increase",
+    "DMG_RATE_UP_ALL": "All Element DMG Rate Increase",
+    "DMG_RATE_UP_NORMAL": "Normal DMG Rate Increase",
+    "DMG_RATE_UP_CHARGED": "Charged DMG Rate Increase",
+    "DMG_RATE_UP_PLUNGING": "Plunging DMG Rate Increase",
+    "DMG_RATE_UP_SKILL": "Skill DMG Rate Increase",
+    "DMG_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG Rate Increase",
+    "DMG_RATE_UP_WEAPON": "Weapon DMG Rate Increase",
+    "DMG_RATE_UP_OTHER": "Other DMG Rate Increase",
+    "HEALING_RATE_UP_SKILL": "Skill Healing Rate Increase",
+    "HEALING_RATE_UP_ELEMENTAL_BURST": "Elemental Burst Healing Rate Increase",
+    "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
+    "DMG_VAL_UP_ANEMO": "Anemo DMG Increase",
+    "DMG_VAL_UP_PHYSICAL": "Physical DMG Increase",
+    "DMG_VAL_UP_ELECTRO": "Electro DMG Increase",
+    "DMG_VAL_UP_GEO": "Geo DMG Increase",
+    "DMG_VAL_UP_PYRO": "Pyro DMG Increase",
+    "DMG_VAL_UP_HYDRO": "Hydro DMG Increase",
+    "DMG_VAL_UP_DENDRO": "Dendro DMG Increase",
+    "DMG_VAL_UP_ALL": "All DMG Increase",
+    "DMG_VAL_UP_NORMAL": "Normal DMG Increase",
+    "DMG_VAL_UP_CHARGED": "Charged DMG Increase",
+    "DMG_VAL_UP_PLUNGING": "Plunging DMG Increase",
+    "DMG_VAL_UP_SKILL": "Skill DMG Increase",
+    "DMG_VAL_UP_ELEMENTAL_BURST": "Elemental Burst DMG Increase",
+    "DMG_VAL_UP_WEAPON": "Weapon DMG Increase",
+    "DMG_VAL_UP_OTHER": "Other DMG Increase",
+    "HEALING_VAL_UP_SKILL": "Skill Healing Increase",
+    "HEALING_VAL_UP_ELEMENTAL_BURST": "Elemental Burst Healing Increase",
+    "DMG_CRIT_RATE_UP_CRYO": "Cryo DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_ANEMO": "Anemo DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_PHYSICAL": "Physical DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_ELECTRO": "Electro DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_GEO": "Geo DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_PYRO": "Pyro DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_HYDRO": "Hydro DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_DENDRO": "Dendro DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_ALL": "All DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_NORMAL": "Normal DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_CHARGED": "Charged DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_PLUNGING": "Plunging DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_SKILL": "Skill DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_WEAPON": "Weapon DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_OTHER": "Other DMG CRIT Rate Increase",
+    "DMG_CRIT_DMG_UP_CRYO": "Cryo DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_ANEMO": "Anemo DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_PHYSICAL": "Physical DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_ELECTRO": "Electro DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_GEO": "Geo DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_PYRO": "Pyro DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_HYDRO": "Hydro DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_DENDRO": "Dendro DMG CRIT DMG Value",
+    "DMG_CRIT_DMG_UP_ALL": "All DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_NORMAL": "Normal DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_CHARGED": "Charged DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_PLUNGING": "Plunging DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_SKILL": "Skill DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "Elemental Burst DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_WEAPON": "Weapon DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_OTHER": "Other DMG CRIT DMG Increase",
+    "DMG_ELEMENT_UP": "Element Improvement (All)",
+    "DMG_ELEMENT_VAPORIZE_UP": "Element Improvement (Vaporize)",
+    "DMG_ELEMENT_MELT_UP": "Element Improvement (Melt)",
+    "DMG_ELEMENT_OVERLOADED_UP": "Element Improvement (Overloaded)",
+    "DMG_ELEMENT_BURNING_UP": "Element Improvement (Burning)",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "Element Improvement (Electrocharged)",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "Element Improvement (Superconduct)",
+    "DMG_ELEMENT_SWIRL_UP": "Element Improvement (Swirl)",
+    "DMG_ELEMENT_DESTRUCTION_UP": "Element Improvement (Destruction)",
+    "DMG_ELEMENT_SHIELD_UP": "Element Amplification (Elemental Shield)",
+    "DMG_ENEMY_DEFENSE_BASE": "Enemy Basic Defense",
+    "DMG_ENEMY_DEFENSE": "Enemy Defense",
+    "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Reduce"
   },
   "GENSHIN": {
     "DMG":{
