--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -6,7 +6,8 @@
   "CHARACTER": {
     "PROPS": "キャラ属性",
     "TALENTS": "スキル",
-    "CONSTELLATION": "命ノ星座"
+    "CONSTELLATION": "命ノ星座",
+    "ALLPROPS": "全属性"
   },
   "WEAPON": {
     "NAME": "武器",
@@ -77,7 +78,110 @@
     "DMG_ANTI_GEO": "岩元素耐性",
     "DMG_ANTI_PYRO": "火元素耐性",
     "DMG_ANTI_HYDRO": "水元素耐性",
-    "DMG_ANTI_DENDRO": "草元素耐性"
+    "DMG_ANTI_DENDRO": "草元素耐性",
+    "HP_BASE": "生命力ベース",
+    "ATTACK_BASE": "攻撃力ベース",
+    "DEFENSE_BASE": "防御力ベース",
+    "HP_VAL_UP": "生命力数値アップ",
+    "ATTACK_VAL_UP": "攻撃力数値アップ",
+    "DEFENSE_VAL_UP": "防御力数値アップ",
+    "DMG_BONUS_WEAPON": "武器ダメージ",
+    "DMG_BONUS_OTHER": "その他ダメージ",
+    "HEALING_BONUS_NORMAL": "基本治療",
+    "HEALING_BONUS_SKILL": "元素スキル治療",
+    "HEALING_BONUS_ELEMENTAL_BURST": "元素爆発治療",
+    "HEALING_BONUS_WEAPON": "武器治療",
+    "HEALING_BONUS_OTHER": "その他治療",
+    "DMG_ANTI_CRYO_MINUS": "氷元素耐性マイナス",
+    "DMG_ANTI_ANEMO_MINUS": "風元素耐性マイナス",
+    "DMG_ANTI_PHYSICAL_MINUS": "物理耐性マイナス",
+    "DMG_ANTI_ELECTRO_MINUS": "雷元素耐性マイナス",
+    "DMG_ANTI_GEO_MINUS": "岩元素耐性マイナス",
+    "DMG_ANTI_PYRO_MINUS": "火元素耐性マイナス",
+    "DMG_ANTI_HYDRO_MINUS": "水元素耐性マイナス",
+    "DMG_ANTI_DENDRO_MINUS": "草元素耐性マイナス",
+    "DMG_ANTI_ALL_MINUS": "全元素耐性マイナス",
+    "DMG_RATE_UP_CRYO": "氷元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_ANEMO": "風元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_PHYSICAL": "物理ダメージ倍率アップ値",
+    "DMG_RATE_UP_ELECTRO": "雷元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_GEO": "岩元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_PYRO": "火元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_HYDRO": "水元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_DENDRO": "草元素ダメージ倍率アップ値",
+    "DMG_RATE_UP_ALL": "全ダメージ倍率アップ値",
+    "DMG_RATE_UP_NORMAL": "基本攻撃ダメージ倍率アップ値",
+    "DMG_RATE_UP_CHARGED": "重撃ダメージ倍率アップ値",
+    "DMG_RATE_UP_PLUNGING": "落下攻撃ダメージ倍率アップ値",
+    "DMG_RATE_UP_SKILL": "元素スキルダメージ倍率アップ値",
+    "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆発ダメージ倍率アップ値",
+    "DMG_RATE_UP_WEAPON": "武器ダメージ倍率アップ値",
+    "DMG_RATE_UP_OTHER": "その他ダメージ倍率アップ値",
+    "HEALING_RATE_UP_SKILL": "元素スキル治療倍率アップ値",
+    "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆発治療倍率アップ値",
+    "DMG_VAL_UP_CRYO": "氷元素ダメージアップ値",
+    "DMG_VAL_UP_ANEMO": "風元素ダメージアップ値",
+    "DMG_VAL_UP_PHYSICAL": "物理ダメージアップ値",
+    "DMG_VAL_UP_ELECTRO": "雷元素ダメージアップ値",
+    "DMG_VAL_UP_GEO": "岩元素ダメージアップ値",
+    "DMG_VAL_UP_PYRO": "火元素ダメージアップ値",
+    "DMG_VAL_UP_HYDRO": "水元素ダメージアップ値",
+    "DMG_VAL_UP_DENDRO": "草元素ダメージアップ値",
+    "DMG_VAL_UP_ALL": "全ダメージアップ値",
+    "DMG_VAL_UP_NORMAL": "基本攻撃ダメージアップ値",
+    "DMG_VAL_UP_CHARGED": "重撃ダメージアップ値",
+    "DMG_VAL_UP_PLUNGING": "落下攻撃ダメージアップ値",
+    "DMG_VAL_UP_SKILL": "元素スキルダメージアップ値",
+    "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆発ダメージアップ値",
+    "DMG_VAL_UP_WEAPON": "武器ダメージアップ値",
+    "DMG_VAL_UP_OTHER": "その他ダメージアップ値",
+    "HEALING_VAL_UP_SKILL": "元素スキル治療アップ値",
+    "HEALING_VAL_UP_ELEMENTAL_BURST": "元素爆発治療アップ値",
+    "DMG_CRIT_RATE_UP_CRYO": "氷元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_ANEMO": "風元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_PHYSICAL": "物理ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_ELECTRO": "雷元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_GEO": "岩元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_PYRO": "火元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_HYDRO": "水元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_DENDRO": "草元素ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_ALL": "全ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_NORMAL": "基本攻撃ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_CHARGED": "重撃ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_PLUNGING": "落下攻撃ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_SKILL": "元素スキルダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆発ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_WEAPON": "武器ダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_OTHER": "その他ダメージ会心率アップ値",
+    "DMG_CRIT_DMG_UP_CRYO": "氷元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_ANEMO": "風元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_PHYSICAL": "物理ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_ELECTRO": "雷元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_GEO": "岩元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_PYRO": "火元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_HYDRO": "水元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_DENDRO": "草元素ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_ALL": "全ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_NORMAL": "基本攻撃ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_CHARGED": "重撃ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_PLUNGING": "落下攻撃ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_SKILL": "元素スキルダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "元素爆発ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_WEAPON": "武器ダメージ会心ダメージアップ値",
+    "DMG_CRIT_DMG_UP_OTHER": "その他ダメージ会心ダメージアップ値",
+    "DMG_ELEMENT_UP": "元素(増幅)（全）",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素(増幅)（蒸発）",
+    "DMG_ELEMENT_MELT_UP": "元素(増幅)（溶解）",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素(増幅)（過負荷）",
+    "DMG_ELEMENT_BURNING_UP": "元素(増幅)（燃焼）",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素(増幅)（感電）",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素(増幅)（超電導）",
+    "DMG_ELEMENT_SWIRL_UP": "元素(増幅)（拡散）",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素(増幅)（氷砕き）",
+    "DMG_ELEMENT_SHIELD_UP": "元素(増幅)（結晶）",
+    "DMG_ENEMY_DEFENSE_BASE": "敵防御（基礎）",
+    "DMG_ENEMY_DEFENSE": "敵防御",
+    "DMG_ENEMY_DEFENSE_DOWN": "敵防御(マイナス)"
   },
   "GENSHIN": {
     "DMG":{
