--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,7 +40,8 @@
     "TARGETVALUE": "Target Value"
   },
   "SYS": {
-    "DELETE": "Delete"
+    "DELETE": "Delete",
+    "ROLLBACK": "Rollback"
   },
   "PROPS": {
     "LEVEL": "Level",
