update Traveler and README

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -9,6 +9,19 @@
     "CONSTELLATION": "命座",
     "ALLPROPS": "全属性"
   },
+  "PLAYER":{
+    "BOY": "空",
+    "GIRL": "荧"
+  },
+  "ELEMENT":{
+    "CRYO": "冰",
+    "ANEMO": "风",
+    "ELECTRO": "雷",
+    "GEO": "岩",
+    "PYRO": "火",
+    "HYDRO": "水",
+    "DENDRO": "草"
+  },
   "WEAPON": {
     "NAME": "武器名",
     "PROPS": "武器属性",
