update Reaction Base and Reaction Beta(3.0)

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -58,7 +58,7 @@
   },
   "PROPS": {
     "LEVEL": "等级",
-    "ASCENDED": "（已突破）",
+    "ASCENDED": "(已突破)",
     "HP": "生命值",
     "ATTACK": "攻击力",
     "DEFENSE": "防御力",
@@ -183,16 +183,21 @@
     "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "元素爆发伤害暴击伤害增加值",
     "DMG_CRIT_DMG_UP_WEAPON": "武器伤害暴击伤害增加值",
     "DMG_CRIT_DMG_UP_OTHER": "其他伤害暴击伤害增加值",
-    "DMG_ELEMENT_UP": "元素増幅（全）",
-    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅（蒸发）",
-    "DMG_ELEMENT_MELT_UP": "元素増幅（融化）",
-    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅（超载）",
-    "DMG_ELEMENT_BURNING_UP": "元素増幅（燃烧）",
-    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅（感电）",
-    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅（超导）",
-    "DMG_ELEMENT_SWIRL_UP": "元素増幅（扩散）",
-    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅（破冰）",
-    "DMG_ELEMENT_SHIELD_UP": "元素増幅（結晶）",
+    "DMG_ELEMENT_UP": "元素増幅(全)",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅(蒸发)",
+    "DMG_ELEMENT_MELT_UP": "元素増幅(融化)",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(超载)",
+    "DMG_ELEMENT_BURNING_UP": "元素増幅(燃烧)",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅(感电)",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅(超导)",
+    "DMG_ELEMENT_SWIRL_UP": "元素増幅(扩散)",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅(破冰)",
+    "DMG_ELEMENT_SHIELD_UP": "元素増幅(結晶)",
+    "DMG_ELEMENT_RUPTURE_UP": "元素増幅(绽放)",
+    "DMG_ELEMENT_BURGEON_UP": "元素増幅(烈绽放)",
+    "DMG_ELEMENT_HYPERBLOOM_UP": "元素増幅(超绽放)",
+    "DMG_ELEMENT_AGGRAVATE_UP": "元素増幅(超激化)",
+    "DMG_ELEMENT_SPREAD_UP": "元素増幅(蔓激化)",
     "DMG_ENEMY_DEFENSE_BASE": "敌人基础防御",
     "DMG_ENEMY_DEFENSE": "敌人防御",
     "DMG_ENEMY_DEFENSE_DOWN": "敌人防御减少",
@@ -213,6 +218,12 @@
       "ORIGIN_MELT": "不暴击伤害(融化)",
       "CRIT_MELT": "暴击伤害(融化)",
       "EXPECT_MELT": "期望伤害(融化)",
+      "ORIGIN_AGGRAVATE": "不暴击伤害(超激化)ᴮᴱᵀᴬ",
+      "CRIT_AGGRAVATE": "暴击伤害(超激化)ᴮᴱᵀᴬ",
+      "EXPECT_AGGRAVATE": "期望伤害(超激化)ᴮᴱᵀᴬ",
+      "ORIGIN_SPREAD": "不暴击伤害(蔓激化)ᴮᴱᵀᴬ",
+      "CRIT_SPREAD": "暴击伤害(蔓激化)ᴮᴱᵀᴬ",
+      "EXPECT_SPREAD": "期望伤害(蔓激化)ᴮᴱᵀᴬ",
       "CRYO": "冰元素伤害",
       "ANEMO": "风元素伤害",
       "PHYSICAL": "物理伤害",
@@ -225,8 +236,12 @@
       "BURNING": "燃烧伤害",
       "ELECTROCHARGED": "感电伤害",
       "SUPERCONDUCT": "超导伤害",
+      "RUPTURE": "绽放伤害ᴮᴱᵀᴬ",
+      "BURGEON": "烈绽放伤害ᴮᴱᵀᴬ",
+      "HYPERBLOOM": "超绽放伤害ᴮᴱᵀᴬ",
       "SWIRL_CRYO": "冰扩散伤害",
       "SWIRL_ELECTRO": "雷扩散伤害",
+      "SWIRL_ELECTRO_AGGRAVATE": "雷扩散伤害(超激化)ᴮᴱᵀᴬ",
       "SWIRL_PYRO": "火扩散伤害",
       "SWIRL_HYDRO": "水扩散伤害",
       "DESTRUCTION": "破冰伤害",
