--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -58,7 +58,7 @@
   },
   "PROPS": {
     "LEVEL": "等級",
-    "ASCENDED": "（已突破）",
+    "ASCENDED": "(已突破)",
     "HP": "生命值",
     "ATTACK": "攻擊力",
     "DEFENSE": "防禦力",
@@ -183,16 +183,21 @@
     "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "元素爆發傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_WEAPON": "武器傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_OTHER": "其他傷害暴擊傷害增加值",
-    "DMG_ELEMENT_UP": "元素増幅（全）",
-    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅（蒸發）",
-    "DMG_ELEMENT_MELT_UP": "元素増幅（融化）",
-    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅（超載）",
-    "DMG_ELEMENT_BURNING_UP": "元素増幅（燃燒）",
-    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅（感電）",
-    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅（超導）",
-    "DMG_ELEMENT_SWIRL_UP": "元素増幅（擴散）",
-    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅（破冰）",
-    "DMG_ELEMENT_SHIELD_UP": "元素増幅（結晶）",
+    "DMG_ELEMENT_UP": "元素増幅(全)",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅(蒸發)",
+    "DMG_ELEMENT_MELT_UP": "元素増幅(融化)",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(超載)",
+    "DMG_ELEMENT_BURNING_UP": "元素増幅(燃燒)",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅(感電)",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅(超導)",
+    "DMG_ELEMENT_SWIRL_UP": "元素増幅(擴散)",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅(破冰)",
+    "DMG_ELEMENT_SHIELD_UP": "元素増幅(結晶)",
+    "DMG_ELEMENT_RUPTURE_UP": "元素増幅(綻放)",
+    "DMG_ELEMENT_BURGEON_UP": "元素増幅(烈綻放)",
+    "DMG_ELEMENT_HYPERBLOOM_UP": "元素増幅(超綻放)",
+    "DMG_ELEMENT_AGGRAVATE_UP": "元素増幅(超激化)",
+    "DMG_ELEMENT_SPREAD_UP": "元素増幅(蔓激化)",
     "DMG_ENEMY_DEFENSE_BASE": "敵人基礎防禦",
     "DMG_ENEMY_DEFENSE": "敵人防禦",
     "DMG_ENEMY_DEFENSE_DOWN": "敵人防禦減少",
@@ -213,6 +218,12 @@
       "ORIGIN_MELT": "不暴擊傷害(融化)",
       "CRIT_MELT": "暴擊傷害(融化)",
       "EXPECT_MELT": "期望傷害(融化)",
+      "ORIGIN_AGGRAVATE": "不暴擊傷害(超激化)ᴮᴱᵀᴬ",
+      "CRIT_AGGRAVATE": "暴擊傷害(超激化)ᴮᴱᵀᴬ",
+      "EXPECT_AGGRAVATE": "期望傷害(超激化)ᴮᴱᵀᴬ",
+      "ORIGIN_SPREAD": "不暴擊傷害(蔓激化)ᴮᴱᵀᴬ",
+      "CRIT_SPREAD": "暴擊傷害(蔓激化)ᴮᴱᵀᴬ",
+      "EXPECT_SPREAD": "期望傷害(蔓激化)ᴮᴱᵀᴬ",
       "CRYO": "冰元素傷害",
       "ANEMO": "風元素傷害",
       "PHYSICAL": "物理傷害",
@@ -225,8 +236,12 @@
       "BURNING": "燃燒傷害",
       "ELECTROCHARGED": "感電傷害",
       "SUPERCONDUCT": "超導傷害",
+      "RUPTURE": "綻放傷害ᴮᴱᵀᴬ",
+      "BURGEON": "烈綻放傷害ᴮᴱᵀᴬ",
+      "HYPERBLOOM": "超綻放傷害ᴮᴱᵀᴬ",
       "SWIRL_CRYO": "冰擴散傷害",
       "SWIRL_ELECTRO": "雷擴散傷害",
+      "SWIRL_ELECTRO_AGGRAVATE": "雷擴散傷害(超激化)ᴮᴱᵀᴬ",
       "SWIRL_PYRO": "火擴散傷害",
       "SWIRL_HYDRO": "水擴散傷害",
       "DESTRUCTION": "破冰傷害",
