--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -193,6 +193,11 @@
     "DMG_ELEMENT_SWIRL_UP": "Element Improvement (Swirl)",
     "DMG_ELEMENT_DESTRUCTION_UP": "Element Improvement (Destruction)",
     "DMG_ELEMENT_SHIELD_UP": "Element Amplification (Elemental Shield)",
+    "DMG_ELEMENT_RUPTURE_UP": "Element Amplification (Rupture)",
+    "DMG_ELEMENT_BURGEON_UP": "Element Amplification (Burgeon)",
+    "DMG_ELEMENT_HYPERBLOOM_UP": "Element Amplification (Hyperbloom)",
+    "DMG_ELEMENT_AGGRAVATE_UP": "Element Amplification (Aggravate)",
+    "DMG_ELEMENT_SPREAD_UP": "Element Amplification (Spread)",
     "DMG_ENEMY_DEFENSE_BASE": "Enemy Basic Defense",
     "DMG_ENEMY_DEFENSE": "Enemy Defense",
     "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Reduce",
@@ -213,6 +218,12 @@
       "ORIGIN_MELT": "No Critical Damage (Melt)",
       "CRIT_MELT": "Critical Damage (Melt)",
       "EXPECT_MELT": "Expected Damage (Melt)",
+      "ORIGIN_AGGRAVATE": "No Critical Damage (Aggravate)ᴮᴱᵀᴬ",
+      "CRIT_AGGRAVATE": "Critical Damage (Aggravate)ᴮᴱᵀᴬ",
+      "EXPECT_AGGRAVATE": "Expected Damage (Aggravate)ᴮᴱᵀᴬ",
+      "ORIGIN_SPREAD": "No Critical Damage (Spread)ᴮᴱᵀᴬ",
+      "CRIT_SPREAD": "Critical Damage (Spread)ᴮᴱᵀᴬ",
+      "EXPECT_SPREAD": "Expected Damage (Spread)ᴮᴱᵀᴬ",
       "CRYO": "Cryo Damage",
       "ANEMO": "Anemo Damage",
       "PHYSICAL": "Physical Damage",
@@ -225,8 +236,12 @@
       "BURNING": "Burning Damage",
       "ELECTROCHARGED": "Electrocharged Damage",
       "SUPERCONDUCT": "Superconduct Damage",
+      "RUPTURE": "Rupture Damageᴮᴱᵀᴬ",
+      "BURGEON": "Burgeon Damageᴮᴱᵀᴬ",
+      "HYPERBLOOM": "Hyperbloom Damageᴮᴱᵀᴬ",
       "SWIRL_CRYO": "CRYO Swirl Damage",
       "SWIRL_ELECTRO": "Electro Swirl Damage",
+      "SWIRL_ELECTRO_AGGRAVATE": "Electro Swirl Damage (Aggravate)ᴮᴱᵀᴬ",
       "SWIRL_PYRO": "Pyro Swirl Damage",
       "SWIRL_HYDRO": "Hydro Swirl Damage",
       "DESTRUCTION": "Destruction Damage",
