--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -183,19 +183,24 @@
     "DMG_CRIT_DMG_UP_ELEMENTAL_BURST": "元素爆発ダメージ会心ダメージアップ値",
     "DMG_CRIT_DMG_UP_WEAPON": "武器ダメージ会心ダメージアップ値",
     "DMG_CRIT_DMG_UP_OTHER": "その他ダメージ会心ダメージアップ値",
-    "DMG_ELEMENT_UP": "元素(増幅)（全）",
-    "DMG_ELEMENT_VAPORIZE_UP": "元素(増幅)（蒸発）",
-    "DMG_ELEMENT_MELT_UP": "元素(増幅)（溶解）",
-    "DMG_ELEMENT_OVERLOADED_UP": "元素(増幅)（過負荷）",
-    "DMG_ELEMENT_BURNING_UP": "元素(増幅)（燃焼）",
-    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素(増幅)（感電）",
-    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素(増幅)（超電導）",
-    "DMG_ELEMENT_SWIRL_UP": "元素(増幅)（拡散）",
-    "DMG_ELEMENT_DESTRUCTION_UP": "元素(増幅)（氷砕き）",
-    "DMG_ELEMENT_SHIELD_UP": "元素(増幅)（結晶）",
+    "DMG_ELEMENT_UP": "元素（増幅）（全）",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素（増幅）（蒸発）",
+    "DMG_ELEMENT_MELT_UP": "元素（増幅）（溶解）",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素（増幅）（過負荷）",
+    "DMG_ELEMENT_BURNING_UP": "元素（増幅）（燃焼）",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素（増幅）（感電）",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素（増幅）（超電導）",
+    "DMG_ELEMENT_SWIRL_UP": "元素（増幅）（拡散）",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素（増幅）（氷砕き）",
+    "DMG_ELEMENT_SHIELD_UP": "元素（増幅）（結晶）",
+    "DMG_ELEMENT_RUPTURE_UP": "元素（増幅）（開花）",
+    "DMG_ELEMENT_BURGEON_UP": "元素（増幅）（列開花）",
+    "DMG_ELEMENT_HYPERBLOOM_UP": "元素（増幅）（超開花）",
+    "DMG_ELEMENT_AGGRAVATE_UP": "元素（増幅）（超激化）",
+    "DMG_ELEMENT_SPREAD_UP": "元素（増幅）（拡激化）",
     "DMG_ENEMY_DEFENSE_BASE": "敵防御（基礎）",
     "DMG_ENEMY_DEFENSE": "敵防御",
-    "DMG_ENEMY_DEFENSE_DOWN": "敵防御(マイナス)",
+    "DMG_ENEMY_DEFENSE_DOWN": "敵防御（マイナス）",
     "SHIELD_BONUS_NORMAL": "基本シールド",
     "SHIELD_BONUS_SKILL": "元素スキルシールド",
     "SHIELD_BONUS_ELEMENTAL_BURST": "元素爆発シールド",
@@ -213,6 +218,12 @@
       "ORIGIN_MELT": "通常ダメージ（溶解）",
       "CRIT_MELT": "クリティカルダメージ（溶解）",
       "EXPECT_MELT": "期待ダメージ（溶解）",
+      "ORIGIN_AGGRAVATE": "通常ダメージ（超激化）ᴮᴱᵀᴬ",
+      "CRIT_AGGRAVATE": "クリティカルダメージ（超激化）ᴮᴱᵀᴬ",
+      "EXPECT_AGGRAVATE": "期待ダメージ（超激化）ᴮᴱᵀᴬ",
+      "ORIGIN_SPREAD": "通常ダメージ（拡激化）ᴮᴱᵀᴬ",
+      "CRIT_SPREAD": "クリティカルダメージ（拡激化）ᴮᴱᵀᴬ",
+      "EXPECT_SPREAD": "期待ダメージ（拡激化）ᴮᴱᵀᴬ",
       "CRYO": "氷元素ダメージ",
       "ANEMO": "風元素ダメージ",
       "PHYSICAL": "物理ダメージ",
@@ -225,8 +236,12 @@
       "BURNING": "燃焼ダメージ",
       "ELECTROCHARGED": "感電ダメージ",
       "SUPERCONDUCT": "超電導ダメージ",
+      "RUPTURE": "開花ダメージᴮᴱᵀᴬ",
+      "BURGEON": "列開花ダメージᴮᴱᵀᴬ",
+      "HYPERBLOOM": "超開花ダメージᴮᴱᵀᴬ",
       "SWIRL_CRYO": "氷拡散ダメージ",
       "SWIRL_ELECTRO": "雷拡散ダメージ",
+      "SWIRL_ELECTRO_AGGRAVATE": "雷拡散ダメージ（超激化）ᴮᴱᵀᴬ",
       "SWIRL_PYRO": "火拡散ダメージ",
       "SWIRL_HYDRO": "水拡散ダメージ",
       "DESTRUCTION": "氷砕きダメージ",
