update UI and buff controller

--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -129,6 +129,9 @@
     "DMG_RATE_UP_PLUNGING": "下落攻擊傷害倍率增加值",
     "DMG_RATE_UP_SKILL": "元素技能傷害倍率增加值",
     "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆發傷害倍率增加值",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "元素爆發傷害倍率增加值(夢想一刀)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "元素爆發傷害倍率增加值(夢想一心)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "元素爆發傷害倍率增加值(光降之劍)",
     "DMG_RATE_UP_WEAPON": "武器傷害倍率增加值",
     "DMG_RATE_UP_OTHER": "其他傷害倍率增加值",
     "HEALING_RATE_UP_SKILL": "元素技能治療倍率增加值",
@@ -201,6 +204,11 @@
     "DMG_ENEMY_DEFENSE_BASE": "敵人基礎防禦",
     "DMG_ENEMY_DEFENSE": "敵人防禦",
     "DMG_ENEMY_DEFENSE_DOWN": "敵人防禦減少",
+    "DMG_ENEMY_DEFENSE_DOWN_NORMAL": "敵人防禦減少(基本攻擊)",
+    "DMG_ENEMY_DEFENSE_DOWN_CHARGED": "敵人防禦減少(重擊)",
+    "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "敵人防禦減少(落下攻擊)",
+    "DMG_ENEMY_DEFENSE_DOWN_SKILL": "敵人防禦減少(元素技能)",
+    "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "敵人防禦減少(元素爆發)",
     "SHIELD_BONUS_NORMAL": "普攻盾量加成",
     "SHIELD_BONUS_SKILL": "元素技能盾量加成",
     "SHIELD_BONUS_ELEMENTAL_BURST": "元素爆發盾量加成",
@@ -218,12 +226,12 @@
       "ORIGIN_MELT": "不暴擊傷害(融化)",
       "CRIT_MELT": "暴擊傷害(融化)",
       "EXPECT_MELT": "期望傷害(融化)",
-      "ORIGIN_AGGRAVATE": "不暴擊傷害(超激化)ᴮᴱᵀᴬ",
-      "CRIT_AGGRAVATE": "暴擊傷害(超激化)ᴮᴱᵀᴬ",
-      "EXPECT_AGGRAVATE": "期望傷害(超激化)ᴮᴱᵀᴬ",
-      "ORIGIN_SPREAD": "不暴擊傷害(蔓激化)ᴮᴱᵀᴬ",
-      "CRIT_SPREAD": "暴擊傷害(蔓激化)ᴮᴱᵀᴬ",
-      "EXPECT_SPREAD": "期望傷害(蔓激化)ᴮᴱᵀᴬ",
+      "ORIGIN_AGGRAVATE": "不暴擊傷害(超激化)",
+      "CRIT_AGGRAVATE": "暴擊傷害(超激化)",
+      "EXPECT_AGGRAVATE": "期望傷害(超激化)",
+      "ORIGIN_SPREAD": "不暴擊傷害(蔓激化)",
+      "CRIT_SPREAD": "暴擊傷害(蔓激化)",
+      "EXPECT_SPREAD": "期望傷害(蔓激化)",
       "CRYO": "冰元素傷害",
       "ANEMO": "風元素傷害",
       "PHYSICAL": "物理傷害",
@@ -236,12 +244,12 @@
       "BURNING": "燃燒傷害",
       "ELECTROCHARGED": "感電傷害",
       "SUPERCONDUCT": "超導傷害",
-      "RUPTURE": "綻放傷害ᴮᴱᵀᴬ",
-      "BURGEON": "烈綻放傷害ᴮᴱᵀᴬ",
-      "HYPERBLOOM": "超綻放傷害ᴮᴱᵀᴬ",
+      "RUPTURE": "綻放傷害",
+      "BURGEON": "烈綻放傷害",
+      "HYPERBLOOM": "超綻放傷害",
       "SWIRL_CRYO": "冰擴散傷害",
       "SWIRL_ELECTRO": "雷擴散傷害",
-      "SWIRL_ELECTRO_AGGRAVATE": "雷擴散傷害(超激化)ᴮᴱᵀᴬ",
+      "SWIRL_ELECTRO_AGGRAVATE": "雷擴散傷害(超激化)",
       "SWIRL_PYRO": "火擴散傷害",
       "SWIRL_HYDRO": "水擴散傷害",
       "DESTRUCTION": "破冰傷害",
