--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,9 +62,9 @@
     "HP": "HP",
     "ATTACK": "Attack",
     "DEFENSE": "Defense",
-    "HP_UP": "HP(Up)",
-    "ATTACK_UP": "Attack(Up)",
-    "DEFENSE_UP": "Defense(Up)",
+    "HP_UP": "HP (UP)",
+    "ATTACK_UP": "Attack (UP)",
+    "DEFENSE_UP": "Defense (UP)",
     "CRIT_RATE": "CRIT RATE",
     "CRIT_DMG": "CRIT DMG",
     "ENERGY_RECHARGE": "Energy Recharge",
@@ -129,6 +129,9 @@
     "DMG_RATE_UP_PLUNGING": "Plunging DMG Rate Increase",
     "DMG_RATE_UP_SKILL": "Skill DMG Rate Increase",
     "DMG_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG Rate Increase",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "Elemental Burst DMG Rate Increase(Musou Hitotachi)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "Elemental Burst DMG Rate Increase(Musou Isshin)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "Elemental Burst DMG Rate Increase(Lightfall Sword)",
     "DMG_RATE_UP_WEAPON": "Weapon DMG Rate Increase",
     "DMG_RATE_UP_OTHER": "Other DMG Rate Increase",
     "HEALING_RATE_UP_SKILL": "Skill Healing Rate Increase",
@@ -201,6 +204,11 @@
     "DMG_ENEMY_DEFENSE_BASE": "Enemy Basic Defense",
     "DMG_ENEMY_DEFENSE": "Enemy Defense",
     "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Reduce",
+    "DMG_ENEMY_DEFENSE_DOWN_NORMAL": "Enemy Defense Reduce (Normal)",
+    "DMG_ENEMY_DEFENSE_DOWN_CHARGED": "Enemy Defense Reduce (Charged)",
+    "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "Enemy Defense Reduce (Plunging)",
+    "DMG_ENEMY_DEFENSE_DOWN_SKILL": "Enemy Defense Reduce (Skill)",
+    "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "Enemy Defense Reduce (Elemental Burst)",
     "SHIELD_BONUS_NORMAL": "Normal Shield Bonus",
     "SHIELD_BONUS_SKILL": "Normal Shield Bonus",
     "SHIELD_BONUS_ELEMENTAL_BURST": "Elemental Burst Shield Bonus",
@@ -218,12 +226,12 @@
       "ORIGIN_MELT": "No Critical Damage (Melt)",
       "CRIT_MELT": "Critical Damage (Melt)",
       "EXPECT_MELT": "Expected Damage (Melt)",
-      "ORIGIN_AGGRAVATE": "No Critical Damage (Aggravate)ᴮᴱᵀᴬ",
-      "CRIT_AGGRAVATE": "Critical Damage (Aggravate)ᴮᴱᵀᴬ",
-      "EXPECT_AGGRAVATE": "Expected Damage (Aggravate)ᴮᴱᵀᴬ",
-      "ORIGIN_SPREAD": "No Critical Damage (Spread)ᴮᴱᵀᴬ",
-      "CRIT_SPREAD": "Critical Damage (Spread)ᴮᴱᵀᴬ",
-      "EXPECT_SPREAD": "Expected Damage (Spread)ᴮᴱᵀᴬ",
+      "ORIGIN_AGGRAVATE": "No Critical Damage (Aggravate)",
+      "CRIT_AGGRAVATE": "Critical Damage (Aggravate)",
+      "EXPECT_AGGRAVATE": "Expected Damage (Aggravate)",
+      "ORIGIN_SPREAD": "No Critical Damage (Spread)",
+      "CRIT_SPREAD": "Critical Damage (Spread)",
+      "EXPECT_SPREAD": "Expected Damage (Spread)",
       "CRYO": "Cryo Damage",
       "ANEMO": "Anemo Damage",
       "PHYSICAL": "Physical Damage",
@@ -236,12 +244,12 @@
       "BURNING": "Burning Damage",
       "ELECTROCHARGED": "Electrocharged Damage",
       "SUPERCONDUCT": "Superconduct Damage",
-      "RUPTURE": "Rupture Damageᴮᴱᵀᴬ",
-      "BURGEON": "Burgeon Damageᴮᴱᵀᴬ",
-      "HYPERBLOOM": "Hyperbloom Damageᴮᴱᵀᴬ",
+      "RUPTURE": "Rupture Damage",
+      "BURGEON": "Burgeon Damage",
+      "HYPERBLOOM": "Hyperbloom Damage",
       "SWIRL_CRYO": "CRYO Swirl Damage",
       "SWIRL_ELECTRO": "Electro Swirl Damage",
-      "SWIRL_ELECTRO_AGGRAVATE": "Electro Swirl Damage (Aggravate)ᴮᴱᵀᴬ",
+      "SWIRL_ELECTRO_AGGRAVATE": "Electro Swirl Damage (Aggravate)",
       "SWIRL_PYRO": "Pyro Swirl Damage",
       "SWIRL_HYDRO": "Hydro Swirl Damage",
       "DESTRUCTION": "Destruction Damage",
