--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -129,6 +129,9 @@
     "DMG_RATE_UP_PLUNGING": "下落攻击伤害倍率增加值",
     "DMG_RATE_UP_SKILL": "元素技能伤害倍率增加值",
     "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害倍率增加值",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "元素爆发伤害倍率增加值(梦想一刀)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "元素爆发伤害倍率增加值(梦想一心)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "元素爆发伤害倍率增加值(光降之剑)",
     "DMG_RATE_UP_WEAPON": "武器伤害倍率增加值",
     "DMG_RATE_UP_OTHER": "其他伤害倍率增加值",
     "HEALING_RATE_UP_SKILL": "元素技能治疗倍率增加值",
@@ -201,6 +204,11 @@
     "DMG_ENEMY_DEFENSE_BASE": "敌人基础防御",
     "DMG_ENEMY_DEFENSE": "敌人防御",
     "DMG_ENEMY_DEFENSE_DOWN": "敌人防御减少",
+    "DMG_ENEMY_DEFENSE_DOWN_NORMAL": "敌人防御减少(基本攻击)",
+    "DMG_ENEMY_DEFENSE_DOWN_CHARGED": "敌人防御减少(重击)",
+    "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "敌人防御减少(落下攻击)",
+    "DMG_ENEMY_DEFENSE_DOWN_SKILL": "敌人防御减少(元素技能)",
+    "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "敌人防御减少(元素爆发)",
     "SHIELD_BONUS_NORMAL": "普攻盾量加成",
     "SHIELD_BONUS_SKILL": "元素技能盾量加成",
     "SHIELD_BONUS_ELEMENTAL_BURST": "元素爆发盾量加成",
@@ -218,12 +226,12 @@
       "ORIGIN_MELT": "不暴击伤害(融化)",
       "CRIT_MELT": "暴击伤害(融化)",
       "EXPECT_MELT": "期望伤害(融化)",
-      "ORIGIN_AGGRAVATE": "不暴击伤害(超激化)ᴮᴱᵀᴬ",
-      "CRIT_AGGRAVATE": "暴击伤害(超激化)ᴮᴱᵀᴬ",
-      "EXPECT_AGGRAVATE": "期望伤害(超激化)ᴮᴱᵀᴬ",
-      "ORIGIN_SPREAD": "不暴击伤害(蔓激化)ᴮᴱᵀᴬ",
-      "CRIT_SPREAD": "暴击伤害(蔓激化)ᴮᴱᵀᴬ",
-      "EXPECT_SPREAD": "期望伤害(蔓激化)ᴮᴱᵀᴬ",
+      "ORIGIN_AGGRAVATE": "不暴击伤害(超激化)",
+      "CRIT_AGGRAVATE": "暴击伤害(超激化)",
+      "EXPECT_AGGRAVATE": "期望伤害(超激化)",
+      "ORIGIN_SPREAD": "不暴击伤害(蔓激化)",
+      "CRIT_SPREAD": "暴击伤害(蔓激化)",
+      "EXPECT_SPREAD": "期望伤害(蔓激化)",
       "CRYO": "冰元素伤害",
       "ANEMO": "风元素伤害",
       "PHYSICAL": "物理伤害",
@@ -236,12 +244,12 @@
       "BURNING": "燃烧伤害",
       "ELECTROCHARGED": "感电伤害",
       "SUPERCONDUCT": "超导伤害",
-      "RUPTURE": "绽放伤害ᴮᴱᵀᴬ",
-      "BURGEON": "烈绽放伤害ᴮᴱᵀᴬ",
-      "HYPERBLOOM": "超绽放伤害ᴮᴱᵀᴬ",
+      "RUPTURE": "绽放伤害",
+      "BURGEON": "烈绽放伤害",
+      "HYPERBLOOM": "超绽放伤害",
       "SWIRL_CRYO": "冰扩散伤害",
       "SWIRL_ELECTRO": "雷扩散伤害",
-      "SWIRL_ELECTRO_AGGRAVATE": "雷扩散伤害(超激化)ᴮᴱᵀᴬ",
+      "SWIRL_ELECTRO_AGGRAVATE": "雷扩散伤害(超激化)",
       "SWIRL_PYRO": "火扩散伤害",
       "SWIRL_HYDRO": "水扩散伤害",
       "DESTRUCTION": "破冰伤害",
