update Version 3.0 and optimize system

--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -197,7 +197,7 @@
     "DMG_ELEMENT_DESTRUCTION_UP": "元素(増幅)(氷砕き)",
     "DMG_ELEMENT_SHIELD_UP": "元素(増幅)(結晶)",
     "DMG_ELEMENT_RUPTURE_UP": "元素(増幅)(開花)",
-    "DMG_ELEMENT_BURGEON_UP": "元素(増幅)(列開花)",
+    "DMG_ELEMENT_BURGEON_UP": "元素(増幅)(烈開花)",
     "DMG_ELEMENT_HYPERBLOOM_UP": "元素(増幅)(超開花)",
     "DMG_ELEMENT_AGGRAVATE_UP": "元素(増幅)(超激化)",
     "DMG_ELEMENT_SPREAD_UP": "元素(増幅)(拡激化)",
@@ -245,7 +245,7 @@
       "ELECTROCHARGED": "感電ダメージ",
       "SUPERCONDUCT": "超電導ダメージ",
       "RUPTURE": "開花ダメージ",
-      "BURGEON": "列開花ダメージ",
+      "BURGEON": "烈開花ダメージ",
       "HYPERBLOOM": "超開花ダメージ",
       "SWIRL_CRYO": "氷拡散ダメージ",
       "SWIRL_ELECTRO": "雷拡散ダメージ",
